logo on mobile, banner link, build with super user, fix qunatity minus

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,6 @@ body {
 
 #header-mobile {
     display: none !important;
-    background: url("https://res.cloudinary.com/drgmt7bbz/image/upload/v1668677570/logo-mobile_sxbusu.png") no-repeat center center;
     -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
     -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
@@ -675,13 +674,11 @@ footer,
 
 @media (max-width: 450px) {
     #header-mobile {
-        background: url("https://res.cloudinary.com/drgmt7bbz/image/upload/v1668677570/logo-mobile_sxbusu.png") no-repeat center right 3.5em;
     }
 }
 
 @media (max-width: 360px) {
     #header-mobile {
-        background: url("https://res.cloudinary.com/drgmt7bbz/image/upload/v1668677570/logo-mobile_sxbusu.png") no-repeat center right 1em;
     }
 }
 
